lbcd (3.3.0-1) unstable; urgency=low

  * New upstream release.
    - Add -S option for simpler protocol two behavior.
    - Fix user handling on Linux systems.
    - Better documentation of the default load calculation.
  * Add LSB information to the init script.

 -- Russ Allbery <rra@debian.org>  Fri,  6 Oct 2006 16:03:43 -0700

lbcd (3.2.6-1) unstable; urgency=low

  * New upstream release.
  * Don't fail on stop and restart actions in the init script if lbcd was
    not already running.
  * Ignore failures in prerm from the old init script, since it will fail
    if lbcd couldn't be stopped.
  * Update standards version to 3.7.2 (no changes required).

 -- Russ Allbery <rra@debian.org>  Tue, 16 May 2006 12:01:08 -0700

lbcd (3.2.5-1) unstable; urgency=low

  * New upstream release.
    - Fix a bug in using external commands to generate weights.
  * Add a watch file.

 -- Russ Allbery <rra@debian.org>  Mon, 10 Apr 2006 20:51:34 -0700

lbcd (3.2.4-1) unstable; urgency=low

  * New upstream release.
    - Document behavior on systems with multiple interfaces.
  * General debian/rules cleanup.
  * Update debian/copyright to my current format.
  * Update to standards version 3.6.2 (no changes required).
  * Update maintainer address.

 -- Russ Allbery <rra@debian.org>  Fri, 17 Mar 2006 23:26:43 -0800

lbcd (3.2.3-1) unstable; urgency=low

  * New upstream release adding the -b option to lbcd.

 -- Russ Allbery <rra@stanford.edu>  Thu, 24 Feb 2005 20:02:29 -0800

lbcd (3.2.2-1) unstable; urgency=low

  * New upstream release.
    - Improved documentation.

 -- Russ Allbery <rra@stanford.edu>  Tue, 16 Nov 2004 14:40:48 -0800

lbcd (3.2.1-1) unstable; urgency=low

  * New upstream release.
    - Fixes -R mode on Linux when responding to v2 queries.

 -- Russ Allbery <rra@stanford.edu>  Thu, 16 Sep 2004 16:12:51 -0700

lbcd (3.2.0-1) unstable; urgency=low

  * Initial release.

 -- Russ Allbery <rra@stanford.edu>  Thu, 19 Aug 2004 17:30:18 -0700
